<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="desired_league_title">Desired League:</string>
    <string name="next_button_title">NEXT</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="logo_image">logo image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_the_team_in_your_city_and_dominate_your_legue">Find the team in your city and dominate your legue</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="skill_background_image">skill background image</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>
